Component with dummy template works

--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <title>Egen-Challenge</title>
 
-    <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
-    <script src="../node_modules/rxjs/bundles/Rx.umd.js"></script>
-    <script src="../node_modules/angular2/bundles/angular2-all.umd.js"></script>
+    <script src="javascripts/angular2/bundles/angular2-polyfills.js"></script>
+    <script src="javascripts/rxjs/bundles/Rx.umd.js"></script>
+    <script src="javascripts/angular2/bundles/angular2-all.umd.js"></script>
 
     <!--<script src="src/tasks/app/tasks.service.js"></script>-->
-    <!--<script src="src/tasks/app/tasks.component.js"></script>-->
-    <!--<script src="src/tasks/main.js"></script>-->
+    <script src="src/users/app/users.component.js"></script>
+    <script src="src/users/main.js"></script>
 
 
 </head>
 <body>
-
+    <egen></egen>
 </body>
 </html>
