--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <script src="javascripts/rxjs/bundles/Rx.umd.js"></script>
     <script src="javascripts/angular2/bundles/angular2-all.umd.js"></script>
 
-    <!--<script src="src/tasks/app/tasks.service.js"></script>-->
+    <script src="src/users/app/users.service.js"></script>
     <script src="src/users/app/users.component.js"></script>
     <script src="src/users/main.js"></script>
 
