Added Pakistan And Belgiu Formats

--- a/public/src/users/users.html
+++ b/public/src/users/users.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="../../stylesheets/table.css">
-
+<p> Supported Formats -> India: +91 , usa:+1, Belgium:+32, Pakistan:+03</p>
 <div id="usersTable">
     <table id="disableTableBackground">
         <tr>
